Poprawa Mutacji Zmiana Zakresu wag na -6.5 ; 6.5 Ogólne poprawki kodu